# bazel_rules_ghdl

./: .bazelignore  BUILD.bazel  GEMINI.md  MODULE.bazel  README.md  WORKSPACE  multitool.lock.json  rules.bzl  rules.md  user.bazelrc
.bcr/: metadata.template.json
.github/workflows/: tag-and-release.yml  test.yml
image/: BUILD.bazel  bullseye.lock.json  bullseye.yaml  rules.bzl
integration/: .bazelrc  BUILD.bazel  MODULE.bazel  WORKSPACE  hello.vhdl
integration/basic/: BUILD.bazel  test.vhdl
integration/sim/: BUILD.bazel  clkgen_test.vhdl  resetgen.vhdl
internal/: BUILD.bazel  ghdl_analyze.bzl  ghdl_analyze.md  ghdl_elaborate.bzl  ghdl_elaborate.md  ghdl_test.bzl  ghdl_test.md  ghdl_verilog.bzl  ghdl_verilog.md  macros.bzl  macros.md  providers.bzl  providers.md  toolchain.bzl  toolchain.md  utils.bzl  utils.md
