module(
    name = "rules_ghdl",
    version = "0.0.0",
)

bazel_dep(name = "rules_distroless", version = "0.8.0")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "gotopt2", version = "2.5.1")
bazel_dep(name = "rules_bid", version = "2.2.2")
bazel_dep(name = "rules_shell", version = "0.8.0")
bazel_dep(name = "rules_oci", version = "2.3.0")

# multitool
bazel_dep(name = "rules_multitool", version = "1.11.1")

multitool = use_extension("@rules_multitool//multitool:extension.bzl", "multitool")
multitool.hub(lockfile = "//:multitool.lock.json")
use_repo(multitool, "multitool")

# apt
apt = use_extension("@rules_distroless//apt:extensions.bzl", "apt")
apt.install(
    name = "bullseye",
    lock = "//image:bullseye.lock.json",
    manifest = "//image:bullseye.yaml",
)
use_repo(apt, "bullseye")

bazel_dep(name = "protobuf", version = "34.1")

# Documentation generation dependencies
bazel_dep(name = "rules_go", version = "0.60.0", dev_dependency = True)
bazel_dep(name = "gazelle", version = "0.51.0", dev_dependency = True)
bazel_dep(name = "buildifier_prebuilt", version = "8.5.1.2", dev_dependency = True)
bazel_dep(name = "bazel_lib", version = "3.3.1", dev_dependency = True)
bazel_dep(name = "bazel_skylib_gazelle_plugin", version = "1.9.0", dev_dependency = True)
bazel_dep(name = "stardoc", version = "0.8.1", dev_dependency = True)

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk", dev_dependency = True)
go_sdk.download(version = "1.24.12")
