load("@bazel_rules_ghdl//:rules.bzl", "ghdl_library", "ghdl_verilog")
load("@rules_shell//shell:sh_test.bzl", "sh_test")

ghdl_library(
    name = "lib",
    srcs = [ "hello.vhdl", ]
)

ghdl_verilog(
    name = "verilog",
    lib = ":lib",
    unit = "my_module",
)

genrule(
    name = "file",
    srcs = [],
    outs = ["file.txt"],
    cmd = "echo hello > $@"
)

sh_test(
    name = "test",
    srcs = [ "test.sh", ],
)
