load("@rules_vhdl//vhdl:defs.bzl", "vhdl_library")
load("@rules_ghdl//:rules.bzl", "ghdl_analyze", "ghdl_verilog")
load("@rules_shell//shell:sh_test.bzl", "sh_test")

vhdl_library(
    name = "lib_src",
    srcs = ["hello.vhdl"],
    library = "lib",
)

ghdl_analyze(
    name = "lib",
    library = ":lib_src",
    args = ["--ieee=synopsys"],
)

ghdl_verilog(
    name = "verilog",
    lib = ":lib",
    unit = "my_module",
    args = ["--ieee=synopsys"],
)

genrule(
    name = "file",
    srcs = [],
    outs = ["file.txt"],
    cmd = "echo hello > $@"
)

sh_test(
    name = "test",
    srcs = [ "test.sh", ],
)
