module(
    name = "rules_ghdl_integration",
    version = "0.0.0",
    bazel_compatibility = [">=9.0.0"]
)

bazel_dep(name = "rules_shell", version = "0.8.0")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "rules_ghdl", version = "0.0.0")
local_path_override(
    module_name = "rules_ghdl",
    path = "../",
)
