load("@bazel_lib//:bzl_library.bzl", "bzl_library")
load("@bazel_lib//lib:write_source_files.bzl", "write_source_files")
load("@stardoc//stardoc:stardoc.bzl", "stardoc")

package(
    default_visibility = ["//visibility:public"],
)

bzl_library(
    name = "providers",
    srcs = ["providers.bzl"],
)

stardoc(
    name = "md_providers",
    out = "gen.providers.md",
    input = "providers.bzl",
    deps = [":providers"],
)

bzl_library(
    name = "toolchain",
    srcs = ["toolchain.bzl"],
    deps = [":providers"],
)

stardoc(
    name = "md_toolchain",
    out = "gen.toolchain.md",
    input = "toolchain.bzl",
    deps = [":toolchain"],
)

bzl_library(
    name = "utils",
    srcs = ["utils.bzl"],
)

stardoc(
    name = "md_utils",
    out = "gen.utils.md",
    input = "utils.bzl",
    deps = [":utils"],
)

bzl_library(
    name = "ghdl_analyze",
    srcs = ["ghdl_analyze.bzl"],
    deps = [
        ":providers",
        ":toolchain",
        ":utils",
        "@rules_vhdl//vhdl:defs_bzl",
    ],
)

stardoc(
    name = "md_ghdl_analyze",
    out = "gen.ghdl_analyze.md",
    input = "ghdl_analyze.bzl",
    deps = [":ghdl_analyze"],
)

bzl_library(
    name = "ghdl_elaborate",
    srcs = ["ghdl_elaborate.bzl"],
    deps = [
        ":providers",
        ":toolchain",
        ":utils",
    ],
)

stardoc(
    name = "md_ghdl_elaborate",
    out = "gen.ghdl_elaborate.md",
    input = "ghdl_elaborate.bzl",
    deps = [":ghdl_elaborate"],
)

bzl_library(
    name = "ghdl_test",
    srcs = ["ghdl_test.bzl"],
    deps = [
        ":ghdl_elaborate",
        ":ghdl_analyze",
        ":providers",
        ":toolchain",
        ":utils",
        "@rules_vhdl//vhdl:defs_bzl",
    ],
)

stardoc(
    name = "md_ghdl_test",
    out = "gen.ghdl_test.md",
    input = "ghdl_test.bzl",
    deps = [":ghdl_test"],
)

bzl_library(
    name = "ghdl_verilog",
    srcs = ["ghdl_verilog.bzl"],
    deps = [
        ":providers",
        ":toolchain",
        ":utils",
    ],
)

stardoc(
    name = "md_ghdl_verilog",
    out = "gen.ghdl_verilog.md",
    input = "ghdl_verilog.bzl",
    deps = [":ghdl_verilog"],
)

bzl_library(
    name = "macros",
    srcs = ["macros.bzl"],
)

stardoc(
    name = "md_macros",
    out = "gen.macros.md",
    input = "macros.bzl",
    deps = [":macros"],
)

write_source_files(
    name = "update_docs",
    files = {
        "providers.md": ":md_providers",
        "toolchain.md": ":md_toolchain",
        "utils.md": ":md_utils",
        "ghdl_analyze.md": ":md_ghdl_analyze",
        "ghdl_elaborate.md": ":md_ghdl_elaborate",
        "ghdl_test.md": ":md_ghdl_test",
        "ghdl_verilog.md": ":md_ghdl_verilog",
        "macros.md": ":md_macros",
    },
)
